fix the map not showing up

--- a/src/style.css
+++ b/src/style.css
@@ -276,9 +276,6 @@ a.btn-dark {
     color: white !important;
 }
 
-#restaurant {
-    padding: 0 !important;
-}
 
 .no-reserve,
 .reserve-success,.reserve-update {
